TRYING to fix BG issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/*html {
+  background-color: rgb(57, 57, 57);
+  overflow: visible;
+}*/
+
 body {
   background-color: rgb(240,240,240);
   font-family: "Slabo 27px", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -14,8 +19,8 @@ a {
  #rectListener {
   height: 180px;
   width: 180px;
-  background-color: rgba(255,0,0,1);
-  position: fixed;
+  background-color: rgba(255,0,0, 1);
+  position: static;
   top: 85px;
   left: 50%;
   transform: translate(-50%, 0);
